--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -54,7 +54,7 @@
 <h1>Tasks</h1>
 <h2>Task1</h2>
 <h2>Task2</h2>
-<p><a href="https://gist.githubusercontent.com/41223222/7fa8bc7875a0d359df515a2d251605d6/raw/7e1b4a7c90cbc1e1c50855e6ed184de15d14a304/g6*list">g6執行結果</a></p><h2>Task3</h2>
+<p><a href="https://mdecd2025.github.io/hw-41223222/content/Brython.html?src=https://gist.githubusercontent.com/41223222/7fa8bc7875a0d359df515a2d251605d6/raw/915f3853578b01f1acc0de4b9ffde33a5b453100/g6*list">g6 執行結果</a></p><h2>Task3</h2>
 <h2>Task4</h2>
 <h2>Task5</h2>
 <h2>Task6</h2>
