--- a/content/Task2.html
+++ b/content/Task2.html
@@ -143,7 +143,8 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">Task1 << <a href='Task1.html'>Previous</a> <a href='Task3.html'>Next</a> >> Task3<br /><h1>Task2</h1>
-<p><a href="https://mdecd2025.github.io/hw-41223222/content/Brython.html?src=https://gist.githubusercontent.com/41223222/7fa8bc7875a0d359df515a2d251605d6/raw/915f3853578b01f1acc0de4b9ffde33a5b453100/g6*list">g6 執行結果</a></p><br />Task1 << <a href='Task1.html'>Previous</a> <a href='Task3.html'>Next</a> >> Task3</div>
+<p><a href="https://mdecd2025.github.io/hw-41223222/content/Brython.html?src=https://gist.githubusercontent.com/41223222/7fa8bc7875a0d359df515a2d251605d6/raw/915f3853578b01f1acc0de4b9ffde33a5b453100/g6*list">g6 執行結果</a></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/SfKxSXktaRQ" width="560"></iframe></p><br />Task1 << <a href='Task1.html'>Previous</a> <a href='Task3.html'>Next</a> >> Task3</div>
         
     <!-- footer -->
       <div class="container">
