--- a/content/Task1.html
+++ b/content/Task1.html
@@ -143,6 +143,8 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">Tasks << <a href='Tasks.html'>Previous</a> <a href='Task2.html'>Next</a> >> Task2<br /><h1>Task1</h1>
+<p><a href="https://mdecd2025.github.io/hw-41223222/content/Brython.html?src=https://gist.githubusercontent.com/41223222/7fa8bc7875a0d359df515a2d251605d6/raw/915f3853578b01f1acc0de4b9ffde33a5b453100/g6*list">g6 執行結果</a></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/SfKxSXktaRQ" width="560"></iframe></p>
 <br />Tasks << <a href='Tasks.html'>Previous</a> <a href='Task2.html'>Next</a> >> Task2</div>
         
     <!-- footer -->
